--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+//This is global style, only  add class which are using largly in code
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
